--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
    <a href="forms.php">Forms PHP</a>
    <br></br>
    <a href="regression.php">Regression PHP</a>
+   <br></br>
+   <a href="clustering.php">Clustering PHP</a>
  </body>
 </html>
