adds scripts to generate MySQL table from Kaggle youtube data, plus basic sql php (PDO) example

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
    <a href="regression.php">Regression PHP</a>
    <br></br>
    <a href="clustering.php">Clustering PHP</a>
+   <br></br>
+   <a href="YoutubeSQL.php">Youtube SQL Database PHP</a>
  </body>
 </html>
